external-crates/move/crates/move-compiler/tests/move_check/parser/missing_angle_brace_close.move
module 0x42::M {
    fun foo() {
        let x = t<u64;
    }
}
